Many improvements to styling

--- a/_config.yml
+++ b/_config.yml
@@ -22,5 +22,5 @@ sass:
 
 # XML feed
 name: Adzz
-description: Insights into the world of code as seen by me.
+description: My insights into the world of code
 url: adzz.github.io
