--- a/_config.yml
+++ b/_config.yml
@@ -10,22 +10,26 @@ title: Adzz
 email: lancaster28@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Personal Blog of Adam Lancaster, aspiring software craftsman.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: /
+# url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: ItizAdz
 github_username:  Adzz
-
-# Highlighting
-highlighter: rouge
-
-# Build settings
-markdown: kramdown
+author:
+  name:           'Adam Lancaster'
+  url:            https://twitter.com/itizadz
+paginate:         5
+permalink:        pretty
+disqus:
+  shortname: adzz
 sass:
   style: compressed
-
+# Dependencies
+markdown:         redcarpet
+highlighter:      pygments
+plugins: [jekyll-paginate, jekyll-gist, jekyll-seo-tag]
+github:
+  repo:           https://github.com/adzz
 # XML feed
 name: Adzz
 description: My insights into the world of code
 url: adzz.github.io
-
-#gems
