--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ sass:
   style: compressed
 # Dependencies
 markdown:         redcarpet
-highlighter:      pygments
+highlighter:      rouge
 plugins: [jekyll-paginate, jekyll-gist, jekyll-seo-tag]
 github:
   repo:           https://github.com/adzz
